# python-sample-poetry

./: README.md  pyproject.toml
python_sample_poetry/: main.py
