[tool.poetry]
name = "python-sample-poetry"
version = "0.1.0"
description = "python sample poetry"
authors = ["Rem_"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.4.0"
python-sample-poetry-lib = {path = "../python-sample-poetry-lib", develop = true}
# python-sample-poetry-lib = {path = "../python-sample-poetry-lib/dist/python-sample-poetry-lib-0.1.0.tar.gz"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = 'python_sample_poetry.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
